# AstarUniversity

./: InvestmentDAO  README.md  package-lock.json  package.json  rust-toolchain.toml  swanky.config.json
contracts/dao/: Cargo.toml  e2e_tests.rs  lib.rs
contracts/governance-token/: Cargo.toml  lib.rs
typedContracts/dao/build-extrinsic/: dao.ts
typedContracts/dao/contract-info/: dao.ts
typedContracts/dao/data/: dao.json
typedContracts/dao/event-data/: dao.json
typedContracts/dao/event-types/: dao.ts
typedContracts/dao/events/: dao.ts
typedContracts/dao/mixed-methods/: dao.ts
typedContracts/dao/query/: dao.ts
typedContracts/dao/tx-sign-and-send/: dao.ts
typedContracts/dao/types-arguments/: dao.ts
typedContracts/dao/types-returns/: dao.ts
typedContracts/governance-token/build-extrinsic/: my_psp22_metadata.ts
typedContracts/governance-token/constructors/: my_psp22_metadata.ts
typedContracts/governance-token/contract-info/: my_psp22_metadata.ts
typedContracts/governance-token/data/: my_psp22_metadata.json
typedContracts/governance-token/mixed-methods/: my_psp22_metadata.ts
typedContracts/governance-token/query/: my_psp22_metadata.ts
typedContracts/governance-token/tx-sign-and-send/: my_psp22_metadata.ts
